--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             </select>
             <button type="button">SUBMIT</button>
         </div>
-        <div id="map"></div>
+        <div id="map-div"></div>
     </body>
 </html>
